--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "8.1.0",
+    "react-webcam": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
